--- a/language/EN.json
+++ b/language/EN.json
@@ -72,9 +72,9 @@
             "MUST_TEXT": "```Please reply to any message```"
         },
         "heroku": {
-            "RESTART_DESC": "Restart RAVANA",
+            "RESTART_DESC": "Restart Bot Thieves",
             "RESTART_MSG": "```Restarting...```",
-            "SHUTDOWN_DESC": "Shutdown RAVANA",
+            "SHUTDOWN_DESC": "Shutdown Bot Thieves",
             "SHUTDOWN_MSG": "```Shutting down ⛔```",
             "DYNO_DESC": "Check heroku dyno usage",
             "DYNO_TOTAL": "```Total Quota```",
@@ -184,14 +184,14 @@
             "TTS_DESC": "It converts text to sound.",
             "TTS_ERROR": "```Error, Speech example of your sentence couldn't be made!```",
             "SONG_DESC": "Uploads the song you wrote.",
-            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song Naadan Vibe```",
+            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song Beliver```",
             "NO_RESULT": "*මට කිසිවක් සොයාගත නොහැකි විය :(*",
-            "DOWNLOADING_SONG": "\n*සිිංදුුව  හොයනවා 🤗*\n",
+            "DOWNLOADING_SONG": "\n*සිිංදුුව  හොයනවා 😎*\n",
             "UPLOADING_SONG": "\n*සිිංදුුව  Uploading  වෙනවා 📲 Use 🎧*\n",
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
-            "DOWNLOADING_VIDEO": "```විීීඩිියො එක Downloading😘...```",
-            "UPLOADING_VIDEO": "```විීීඩිියො එක Uploading🥰...```",
+            "DOWNLOADING_VIDEO": "```විීීඩිියො එක Downloading😎...```",
+            "UPLOADING_VIDEO": "```විීීඩිියො එක Uploading😆🥰...```",
             "YT_DESC": "It searchs on YouTube.",
             "NEED_WORDS": "```Please write a few words!```",
             "GETTING_VIDEOS": "```I'm bringing videos...```",
@@ -217,13 +217,13 @@
         "updater": {
             "UPDATER_DESC": "යාවත්කාලීනය පරීක්ෂා කරයි.",
             "UPDATE": "*ඔබේ බොට් සම්පූර්ණයෙන්ම යාවත්කාලීනයි!*",
-            "NEW_UPDATE": "*RAVANA Update Available*\n\nයාවත්කාලීන කිරීමට පෙර කරුණාකර සහාය කණ්ඩායමෙන් විමසන්න https://chat.whatsapp.com/BZxwFPt5pUe19Y4EW9DjDP. එසේ නොමැතිනම් දෝෂයක් ඇතිවීමේ අවස්ථාව  ඇත\n\nවෙනස්කම්:\n```",
+            "NEW_UPDATE": "*Bot Thieves Update Available*\n\nයාවත්කාලීන කිරීමට පෙර කරුණාකර සහාය කණ්ඩායමෙන් විමසන්න http://wa.me/+94757058075. එසේ නොමැතිනම් දෝෂයක් ඇතිවීමේ අවස්ථාව  ඇත\n\nවෙනස්කම්:\n```",
             "UPDATE_NOW_DESC": " එය යාවත්කාලීන කරයි.",
             "UPDATING": "```Updating..🇱🇰```",
             "INVALID_HEROKU": "*❌ ඔබේ හෙරොකු තොරතුරු වැරදියසාර්ථකව යාවත්කාලීන කරන ලදි!*",
             "UPDATED": "*Updated 🤠✅*",
             "UPDATED_LOCAL": "*✅ සාර්ථකව යාවත්කාලීන කරන ලදි!*",
-            "AFTER_UPDATE": "💢 RAVANA නැවත ආරම්භ කිරීම ?*"
+            "AFTER_UPDATE": "💢 Bot Thieves නැවත ආරම්භ කිරීම ?*"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
@@ -539,3 +539,4 @@
         }
     }
 }
+
