--- a/language/SI.json
+++ b/language/SI.json
@@ -176,12 +176,12 @@
             "SONG_DESC": "ඔබ ඉල්ලූ ගීතය උඩුගත කරයි.",
             "NEED_TEXT_SONG": "* කරුණාකර ගීතයක් ලියන්න!*\n*උදාහරණය:* ```.song eminem - rap god```",
             "NO_RESULT": "*මට කිසිවක් සොයා ගත නොහැක😔 :(*",
-            "DOWNLOADING_SONG": "```සිංදුව Downloading වෙනවා පොඩ්ඩක් ඉන්න...🥰```",
-            "UPLOADING_SONG": "```සිංදුව දැන් Uploading වෙනෝ😍...```",
+            "DOWNLOADING_SONG": "```සිංදුව Downloading වෙනවා පොඩ්ඩක් ඉන්න හරියැ 😎...🥰```",
+            "UPLOADING_SONG": "```සිංදුව දැන් Uploading වෙනෝ හරියැ😆...```",
             "VIDEO_DESC": "යූටියුබ් වෙතින් වීඩියෝ බාගන්න.",
             "NEED_VIDEO": "*කරුණාකර වීඩියෝ සබැඳියක් ලියන්න!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
-            "DOWNLOADING_VIDEO": "```වීඩියෝව  Downloading වෙනවා පොඩ්ඩක් ඉන්න...🥰...```",
-            "UPLOADING_VIDEO": "```වීඩියෝව දැන්  Uploading වෙනෝ😍...```",
+            "DOWNLOADING_VIDEO": "```වීඩියෝව  Downloading වෙනවා පොඩ්ඩක් ඉන්න හරියැ😎...🥰...```",
+            "UPLOADING_VIDEO": "```වීඩියෝව දැන්  Uploading වෙනෝ හරියැ 😆...```",
             "YT_DESC": "YouTube එකෙන් හොයනවා.",
             "NEED_WORDS": "```කරුණාකර වචන කිහිපයක් ලියන්න!```",
             "GETTING_VIDEOS": "```මම වීඩියෝ ගෙන එනවා...```",
@@ -213,7 +213,7 @@
             "INVALID_HEROKU": "*❌ ඔබේ හෙරෝකූ තොරතුරු වැරදියි!*",
             "UPDATED": "*✅ සාර්ථකව යාවත්කාලීන කිරීම!*",
             "UPDATED_LOCAL": "*✅ සාර්ථකව යාවත්කාලීන කිරීම!*",
-            "AFTER_UPDATE": "*💬 RAVANA  ස්වයංක්රීයව නැවත ආරම්භ වේ!*"
+            "AFTER_UPDATE": "*💬 Bot Thieves  ස්වයංක්රීයව නැවත ආරම්භ වේ!*"
         },
         "weather": {
             "WEATHER_DESC": "කාලගුණය පෙන්වයි.",
